# coyote3

./: .coveragerc  .editorconfig  .gitignore  .markdownlint-cli2.yaml  .markdownlint.jsonc  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Dockerfile.redis  LICENSE.txt  MIGRATION_PLAN_DNA_RNA_SHARED_SERVICES.md  README  README.md  SECURITY.md  app.log.1  asgi.py  config.py  docker-compose.dev.yml  docker-compose.yml  example.env  example.stage.env  gunicorn.conf.py  logging_setup.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev-ram.txt  requirements-dev.txt  requirements.txt  requirements_new.txt  run.py  run_api.py  tailwind.config.js  wsgi.py
.githooks/: pre-commit
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  support_request.md
.github/workflows/: bootstrap-and-ingest-check.yml  center-onboarding-check.yml  center-onboarding-smoke.yml  change_version-reminder.yml  changelog-reminder.yml  pr-format-tests.yml  quality.yml
.internal/: COLLECTION_KEY_MIGRATION_MATRIX.md  DATABASE_AGNOSTIC_BACKEND_PLAN.md
api/: __init__.py  app.py  config.py  extensions.py  flask_app.py  http.py  lifecycle.py  main.py  middleware.py  openapi.py  runtime.py  runtime_bootstrap.py  runtime_setup.py  runtime_state.py  settings.py
api/audit/: __init__.py  access_events.py
api/client/: __init__.py  auth.py
api/common/: __init__.py  assay_filters.py  dashboard_utility.py  managed_records.py  report_util.py  serialization.py  utility.py
api/contracts/: __init__.py  admin.py  auth.py  common.py  coverage.py  dashboard.py  db_documents.py  dna.py  generic.py  home.py  http.py  internal.py  managed_resources.py  managed_ui_schemas.py  public.py  reports.py  rna.py  samples.py  system.py
api/core/: exceptions.py
api/db/: __init__.py  annotations.py  asp.py  asp_configs.py  bam_service.py  base.py  biomarkers.py  blacklist.py  brcaexchange.py  civic.py  cnvs.py  cosmic.py  coverage.py  coverage2.py  expression.py  fusions.py  group_coverage.py  hgnc.py  iarc_tp53.py  isgl.py  mongo.py  oncokb.py  permissions.py  reported_variants.py  reports.py  rna_classification.py  rna_expression.py  rna_qc.py  roles.py  samples.py  schemas.py  translocs.py  users.py  variants.py  vep_meta.py
api/domain/: __init__.py
api/errors/: __init__.py  exceptions.py
api/infra/: dashboard_cache.py  samples_cache.py
api/models/: __init__.py  user.py
api/observability/: auth_metrics.py  prometheus_metrics.py
api/repositories/: __init__.py  admin_repository.py  common_repository.py  coverage_repository.py  dashboard_repository.py  dna_repository.py  home_repository.py  internal_repository.py  public_repository.py  report_repository.py  rna_repository.py  sample_repository.py  user_repository.py
api/routers/: __init__.py  admin_resources.py  auth.py  biomarkers.py  change_helpers.py  classifications.py  cnvs.py  common.py  coverage.py  dashboard.py  dna_structural.py  fusions.py  health.py  home.py  internal.py  mutation_helpers.py  permissions.py  public.py  registry.py  reports.py  rna.py  roles.py  samples.py  small_variants.py  translocations.py  users.py  variants.py
api/routes/: admin.py  common.py  coverage.py  dashboard.py  dna.py  dna_structural.py  home.py  internal.py  public.py  reports.py  rna.py  rna_mutations.py  samples.py  system.py
api/security/: __init__.py  access.py  audit_events.py  auth_service.py  password_flows.py  ports.py  repository.py
api/services/: __init__.py  admin_common.py  admin_permission_service.py  admin_resource_service.py  admin_role_service.py  admin_user_service.py  auth.py  auth_service.py  biomarker_service.py  (+26 more)
bugs/: report_duplication.txt
config/: coyote3_collections.toml
coyote/: __extensions.py  __init__.py  __version__.py  util.py
coyote_api/: __init__.py  app.py
coyote_web/: __init__.py  api_client.py  api_models.py
docker/: Dockerfile  Dockerfile.dev  Dockerfile.docs  Dockerfile.redis
docs/: API_ENDPOINT_CATALOG.md  API_REFERENCE.md  ARCHITECTURE_OVERVIEW.md  AUTH_LOGIN_MODEL_AND_STATS.md  BACKEND_DB_AGNOSTIC_REFACTOR.md  CODE_STYLE.md  DATA_MODEL.md  DEPLOYMENT_AND_OPERATIONS.md  DEVELOPER_GUIDE.md  EXTENSION_PLAYBOOK.md  GLOSSARY.md  MONGO_DOCKER_DEV_RUNTIME.md  OPERATIONS_VERIFICATION_2026-03-11.md  PATIENT_DATA_BACKUP_AND_RECOVERY.md  RELEASE_PROCESS.md  ROUTE_IMPLEMENTATION_GUIDE.md  SECURITY_MODEL.md  TESTING_STRATEGY.md  TRACEABILITY_MATRIX.md  TROUBLESHOOTING.md  UI_USER_GUIDE.md  blueprints-module.md  db-module.md  getting-started.md  index.md  models-module.md  project-structure.md  services-module.md  util-module.md
schemas/: asp_schema.json  dna_aspc.json  isgl_schema.json  permission_policy_schema.json  role_schema.json  user_schema.json
scripts/: add_user.py  api_login.py  backfill_business_keys.py  backfill_reported_variants.py  backfill_roles_role_id.py  backfill_users_user_id.py  bootstrap_center_collections.sh  bootstrap_local_admin.py  build_seed_bundle.py  cdm-mongodump.dbs.txt  cdm-mongodump.sh  center_check.sh  center_first_run.sh  center_preflight.sh  center_smoke.sh  check_contract_integrity.sh  check_markdown_links.py  check_shell_quality.sh  compose-with-version.sh  compose_first_run.sh  create_external_mongo_volumes.sh  create_mongo_micro_snapshot.py  create_mongo_snapshot.py  export_collection_contracts_doc.py  export_seed_from_mongo.py  gene_db_creation.py  import_coyote_sample.py  install.alpha.sh  install.beta.sh  install.dev.sh  install.sh  install.stage.sh  install.test.sh  lennart-build-cdm-app.sh  lennart-build-coyote-app-alpha.sh  lennart-build-coyote-app-beta.sh  lennart-build-coyote-app.sh  lennart-update-conf-restart-coyote.sh  migrate_db_identity.py  mongo_backup_archive.sh  (+20 more)
shared/: __init__.py  app_config.py  cache_backend.py  config_constants.py  logging.py  logging_setup.py  rate_limit.py  utils.py
tests/: README.md  conftest.py  test_api_client_architecture.py  test_api_route_security.py
(+1155 files in other folders)
