[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Coyote3"
version = "4.0.0"
requires-python = ">=3.12"
readme = "README.md"
license = {file = "LICENSE.txt"}
description = "A Bioinformatics Interpretation and Analysis Tool built for Section for Molecular Diagnostics, Region Skåne, Lund, Sweden"
authors = [
    {name = "Coyote3 Authors"},
]
keywords = [
    "bioinformatics",
    "clinical-genomics",
    "molecular-diagnostics",
    "flask",
    "fastapi",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Framework :: Flask",
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "arrow==1.3.0",
    "bleach==6.3.0",
    "Brotli==1.1.0",
    "colorlog==6.8.2",
    "cffi==1.17.1",
    "click==8.1.7",
    "cryptography==44.0.3",
    "cssselect2==0.7.0",
    "dnspython==2.6.1",
    "email_validator==2.2.0",
    "filelock==3.15.4",
    "Flask==3.0.3",
    "Flask-Caching==2.3.1",
    "Flask-Cors==6.0.0",
    "Flask-LDAPConn==0.10.2",
    "Flask-Login==0.6.3",
    "Flask-PyMongo==3.0.1",
    "flask_weasyprint==1.1.0",
    "Flask-WTF==1.2.1",
    "flash==1.0.3",
    "fonttools==4.54.1",
    "json5==0.10.0",
    "gunicorn==23.0.0",
    "ldap3==2.9.1",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "Markdown==3.6",
    "MarkupSafe==2.1.5",
    "pillow==10.4.0",
    "pydantic==2.11.1",
    "pydantic_core==2.33.0",
    "fastapi==0.116.1",
    "python-multipart==0.0.20",
    "uvicorn==0.35.0",
    "httpx==0.28.1",
    "pydyf==0.11.0",
    "pymongo==4.16.0",
    "pysam==0.23.3",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "redis==5.2.1",
    "pytz==2024.1",
    "PyYAML==6.0.1",
    "rich-click==1.8.4",
    "sentinels==1.0.0",
    "six==1.16.0",
    "tinycss2==1.4.0",
    "tinyhtml5==2.0.0",
    "toml==0.10.2",
    "types-python-dateutil==2.9.0.20240316",
    "typing_extensions==4.12.2",
    "weasyprint==63.0",
    "webencodings==0.5.1",
    "Werkzeug==3.0.6",
    "WTForms==3.1.2",
]

[project.urls]
Homepage = "https://github.com/SMD-Bioinformatics-Lund/coyote3"
Repository = "https://github.com/SMD-Bioinformatics-Lund/coyote3"
Documentation = "https://smd-bioinformatics-lund.github.io/coyote3"
"Bug Tracker" = "https://github.com/SMD-Bioinformatics-Lund/coyote3/issues"

[project.optional-dependencies]
dev = [
    "mypy==1.11.0",
    "mypy-extensions==1.0.0",
    "pre-commit==3.7.1",
    "shellcheck-py==0.10.0.1",
    "black==24.4.2",
    "ruff==0.13.0",
]
test = [
    "pytest==8.3.2",
    "pytest-mock==3.14.0",
    "pytest-cov==5.0.0",
    "pytest-asyncio==0.23.8",
    "coverage==7.6.1",
    "mongomock==4.1.2",
]
docs = [
    "mkdocs",
    "mkdocs-readthedocs",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I", "D", "TID"]
# D1xx: missing docstrings — not enforced yet (too many to add at once; future work)
# D203/D213: conflict with Google style (D211/D212 selected by convention)
# D400/D401/D415: first-line punctuation — too noisy for existing codebase
ignore = [
    "E501",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D200",
    "D202",
    "D203",
    "D205",
    "D212",
    "D213",
    "D400",
    "D401",
    "D403",
    "D410",
    "D411",
    "D415",
    "D416",
    "D417",
    "D419",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"api" = { msg = "UI/runtime-adjacent code must not import backend api.* modules directly; use the HTTP client boundary instead." }
"pymongo" = { msg = "Mongo driver imports are restricted to infra/common/script layers; keep UI and higher-level runtime code storage-agnostic." }
"bson" = { msg = "Mongo BSON helpers are restricted to infra/common/script layers; use owned helper seams outside those layers." }
"motor" = { msg = "Mongo driver imports are restricted to infra/common/script layers; keep UI and higher-level runtime code storage-agnostic." }
"flask_pymongo" = { msg = "UI and runtime code must not talk to Mongo through Flask-PyMongo; use backend HTTP or infra handler seams instead." }

[tool.ruff.lint.per-file-ignores]
"api/**/*.py" = ["TID251"]
"scripts/**/*.py" = ["TID251"]
"tests/**/*.py" = ["TID251"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["api*", "coyote*", "shared*"]

[tool.setuptools.package-data]
coyote = ["templates/**/*.html", "static/**/*"]
